# OpsPulse

./: .env.example  .gitignore  Makefile  README.md  database.py  docker-compose.yml  etl.py  main.py  models.py  opspulse.db  pyproject.toml  requirements.txt  schemas.py
dags/: ops_pulse_etl.py  opspulse_daily_pipeline.py
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docs/: architecture.md
docs/demo/: index.html
frontend/: App.js
scripts/: generate_workflow_data.py
sql/init/: 001_create_schemas.sql  002_create_tables.sql  003_create_quarantine_table.sql
sql/marts/: 001_reporting_views.sql
src/opspulse/: __init__.py
src/opspulse/api/: __init__.py  __main__.py  dependencies.py  main.py  repository.py  routes.py  schemas.py
src/opspulse/core/: settings.py
src/opspulse/db/: __init__.py  engine.py
src/opspulse/etl/: __init__.py  extract.py  load.py  pipeline.py  transform.py  validate.py
src/opspulse/models/: __init__.py
src/opspulse/utils/: __init__.py  logging.py
tests/: test_api.py  test_transform.py  test_validate.py
tests/fixtures/: integration_workflow_events.csv
tests/integration/: conftest.py  test_pipeline_postgres_integration.py
